--- a/client/src/components/Auth/Login/login.css
+++ b/client/src/components/Auth/Login/login.css
@@ -1,30 +1,37 @@
 /* form wrapper */
 
 #loginStyles_formWrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-color: rgb(70, 70, 70);
+    width: 95%;
+    max-width: 24rem;
+    height: auto;
+    border-radius: 4px;
+    box-shadow: 0 2px 15px rgb(141, 141, 141);
 }
 
 /* form element */
 
 #loginStyles_form {
-    width: 100%;
-    max-width: 22rem;
-    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    padding: 1rem;
 }
 
 /* input */
 
 .loginStyles_input {
+    width: auto;
     display: block;
     text-align: left;
-    width: 100%;
-    margin-left: -8px;
-    margin-bottom: 2rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 1.5rem 0;
     padding: .8rem .5rem;
     font-size: 1rem;
     border-radius: 5px;
