--- a/client/src/components/Post/PostItem/postItem.css
+++ b/client/src/components/Post/PostItem/postItem.css
@@ -32,6 +32,7 @@
     max-width: 30rem;
     height: 23rem;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 /* grey text paragraph wrap with the category and date */
@@ -66,18 +67,58 @@
 /* post 'read more' button */
 
 .postItemStyles_readMoreBtn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #d492af;
     border: 1px solid #d492af;
     border-radius: 3px;
     color: black;
+    font-size: 1rem;
     -webkit-transition: color .3s ease-out;
     -moz-transition: color .3s ease-out;
     -o-transition: color .3s ease-out;
     transition: color .3s ease-out;
+    cursor: pointer;
+    padding: .3rem .5rem;
 }
 
 .postItemStyles_readMoreBtn:hover {
     color: white;
+}
+/* right arrow icon */
+.postItemStyles_rightArrowIcon {
+    margin-left: .3rem;
+}
+/* icon section wrap for both comments and likes */
+
+.postItemStyles_iconWrap {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+/* like section wrap */
+
+.postItemStyles_likeWrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* like icon */
+
+.postItemStyles_likeIcon {
+    color: black;
+}
+
+/* like number */
+
+.postItemStyles_likeNumber {
+    color: black;
+    font-size: 1.2rem;
+    margin: 0 .3rem;
+    text-decoration: none;
 }
 
 /* comment section wrap */
@@ -99,7 +140,7 @@
 .postItemStyles_commentLength {
     color: black;
     font-size: 1.2rem;
-    margin: -.5rem 0 0 .3rem;
+    margin: 0 .3rem;
 }
 
 /* ! MEDIA QUERIES */
