created a dropdown menu for auth users

--- a/client/src/components/Layout/Navbar/navbar.css
+++ b/client/src/components/Layout/Navbar/navbar.css
@@ -31,7 +31,7 @@
 .navLinkWrap {
     float: right;
     display: flex;
-    margin-top: .8rem;
+    margin-top: .6rem;
 }
 
 /* style of text buttons for navigation links */
@@ -40,24 +40,83 @@
     color: rgb(0, 0, 0);
     font-weight: 500;
     font-size: 1.3rem;
+    text-decoration: none;
+    letter-spacing: .05rem;
+    display: inline-block;
+    padding: .3rem 0;
+    position: relative;
 }
 
 .navSpan:after {
-    display: block;
-    left: 0;
-    bottom: -10px;
-    width: 0;
-    height: 2px;
-    background-color: #d492af;
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
     content: "";
-    -webkit-transition: width 0.2s ease-in-out;
-    -moz-transition: width 0.2s ease-in-out;
-    -o-transition: width 0.2s ease-in-out;
-    transition: width 0.2s ease-in-out;
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: rgb(144, 0, 0);
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
 }
 
 .navSpan:hover:after {
     width: 100%;
+    left: 0;
+}
+
+/* dropdown */
+.navStyles_dropdownWrapper {
+    padding: 0 .3rem;
+}
+.navStyles_dropdownWrapper ul {
+    font-size: 0;
+    list-style-type: none;
+    padding: 0;
+}
+
+.navStyles_dropdownWrapper ul li {
+    display: inline-block;
+    position: relative;
+}
+
+/* used to hide the dropdown contents before hovering */
+
+.navStyles_dropdownWrapper ul li ul {
+    display: none;
+    padding: 0;
+    z-index: 99;
+}
+
+/* background of the dropdown button area */
+
+.navStyles_dropdownWrapper ul li:hover {
+    cursor: pointer;
+}
+
+/* the hidden dropdown part */
+
+.navStyles_dropdownWrapper ul li:hover ul {
+    display: block;
+    width: 200px;
+    left: 0;
+    position: absolute;
+}
+
+/* background of the dropdown items */
+
+.navStyles_dropdownWrapper ul li:hover ul li {
+    display: block;
+    background-color: #e7e7e7;
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 15px;
+}
+
+/* hovering over each of the items inside the dropdown */
+
+.navStyles_dropdownWrapper ul li:hover ul li:hover {
+    background-color: #e0e0e0;
 }
 
 /* media query for the mobile sized nav */
