--- a/client/src/components/Layout/Alert/alert.css
+++ b/client/src/components/Layout/Alert/alert.css
@@ -15,6 +15,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.258);
     bottom: 10px;
     left: 50%;
+    z-index: 99;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     transform: translateX(-50%);
