--- a/client/src/components/Layout/MobileNav/mobileNav.css
+++ b/client/src/components/Layout/MobileNav/mobileNav.css
@@ -1,15 +1,7 @@
-#mobileNavStyles_button {
-    width: 86px;
-    height: 40px;
-    background-color: #f9cb11;
-    cursor: pointer;
-    float: right;
-    transition: all 0.25s ease;
-}
+/* root element for the mobile nav */
 
-#mobileNavStyles_button:hover {
-    opacity: 0.8;
-    transition: all 0.25s ease;
+#mobilNavStyles_root {
+    overflow: hidden;
 }
 
 .menu {
@@ -21,33 +13,6 @@
     visibility: hidden;
     transition: all 0.25s ease;
     transform: translateX(-50%);
-}
-
-.menu a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    padding: 20px;
-}
-
-.menu ul {
-    padding: 0;
-    margin: 0;
-}
-
-.menu ul li {
-    font-size: 16px;
-    border-bottom: 1px solid #fff;
-    transition: all 0.25s ease;
-    animation: fadeInRight .25s ease forwards;
-    opacity: 0;
-}
-
-.menu ul li:hover {
-    opacity: 0.8;
-    transition: all 0.25s ease;
-    background: #000;
-    cursor: pointer;
 }
 
 .active {
@@ -77,4 +42,107 @@
         opacity: 1;
         left: 0;
     }
+}
+
+/* nav icon */
+
+#mobileNavStyles_button {
+    width: 60px;
+    height: 45px;
+    float: right;
+    margin: .3rem .3rem;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+
+/* Icon 2 */
+
+#mobileNavStyles_button span {
+    display: block;
+    position: absolute;
+    height: 7px;
+    width: 50%;
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+#mobileNavStyles_button span:nth-child(even) {
+    left: 50%;
+    border-radius: 0 9px 9px 0;
+}
+
+#mobileNavStyles_button span:nth-child(odd) {
+    left: 0px;
+    border-radius: 9px 0 0 9px;
+}
+
+#mobileNavStyles_button span:nth-child(1), #mobileNavStyles_button span:nth-child(2) {
+    top: 0px;
+}
+
+#mobileNavStyles_button span:nth-child(3), #mobileNavStyles_button span:nth-child(4) {
+    top: 18px;
+}
+
+#mobileNavStyles_button span:nth-child(5), #mobileNavStyles_button span:nth-child(6) {
+    top: 36px;
+}
+
+#mobileNavStyles_button.open span:nth-child(1), #mobileNavStyles_button.open span:nth-child(6) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+#mobileNavStyles_button.open span:nth-child(2), #mobileNavStyles_button.open span:nth-child(5) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+#mobileNavStyles_button.open span:nth-child(1) {
+    left: 5px;
+    top: 7px;
+}
+
+#mobileNavStyles_button.open span:nth-child(2) {
+    left: calc(50% - 5px);
+    top: 7px;
+}
+
+#mobileNavStyles_button.open span:nth-child(3) {
+    left: -50%;
+    opacity: 0;
+}
+
+#mobileNavStyles_button.open span:nth-child(4) {
+    left: 100%;
+    opacity: 0;
+}
+
+#mobileNavStyles_button.open span:nth-child(5) {
+    left: 5px;
+    top: 29px;
+}
+
+#mobileNavStyles_button.open span:nth-child(6) {
+    left: calc(50% - 5px);
+    top: 29px;
 }
