--- a/client/src/components/Layout/MobileNav/mobileNav.css
+++ b/client/src/components/Layout/MobileNav/mobileNav.css
@@ -1,11 +1,82 @@
 /* root element for the mobile nav */
 
 #mobilNavStyles_root {
-    overflow: hidden;
+    /* overflow: hidden;
+    height: 100%; */
+}
+
+/* nav wrapper for all the mobile nav buttons */
+
+#mobileNavStyles_navBtnWrap {
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 100%;
+}
+
+/* icon wrapper */
+
+.mobileNavStyles__socialIconWrap {
+    position: absolute;
+    top: 15px;
+    left: 0;
+}
+
+/* icons */
+
+.mobileNavStyles_socialIcon {
+    font-size: 1.8rem;
+    margin: 0 .3rem 0 .3rem;
+    color: black;
+}
+
+/* nav logo */
+
+#mobileNavStyles_caitLogoImg {
+    display: block;
+    width: 100%;
+}
+
+/* link styling around the nav buttons */
+
+.mobileNavStyles_navLink {
+    display: block;
+    padding: .8rem 0;
+    margin-left: .5rem;
+}
+
+/* style of text buttons for navigation links */
+
+.mobileNavStyles_navSpan {
+    color: rgb(0, 0, 0);
+    font-weight: 500;
+    font-size: 1.3rem;
+    text-decoration: none;
+    letter-spacing: .05rem;
+    display: inline-block;
+    position: relative;
+    padding: .3rem 0;
+}
+
+.mobileNavStyles_navSpan:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: rgb(144, 0, 0);
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
+
+.mobileNavStyles_navSpan:hover:after {
+    width: 100%;
+    left: 0;
 }
 
 .menu {
-    background: #34495e;
     height: 100vh;
     width: 250px;
     opacity: 0;
@@ -13,6 +84,8 @@
     visibility: hidden;
     transition: all 0.25s ease;
     transform: translateX(-50%);
+    z-index: 999;
+    box-shadow: 0 0 8px rgb(56, 56, 56);
 }
 
 .active {
@@ -44,105 +117,57 @@
     }
 }
 
-/* nav icon */
+/* nav menu icon */
 
-#mobileNavStyles_button {
-    width: 60px;
-    height: 45px;
-    float: right;
-    margin: .3rem .3rem;
-    position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+#mobileNavStyles_menuBtn {
     cursor: pointer;
-}
-
-/* Icon 2 */
-
-#mobileNavStyles_button span {
-    display: block;
+    padding: 10px 35px 16px 0px;
+    float: right;
+    margin: .8rem .8rem;
     position: absolute;
-    height: 7px;
-    width: 50%;
-    opacity: 1;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+    top: 0;
+    right: 0;
 }
 
-#mobileNavStyles_button span:nth-child(even) {
-    left: 50%;
-    border-radius: 0 9px 9px 0;
+#mobileNavStyles_menuBtn span, #mobileNavStyles_menuBtn span:before, #mobileNavStyles_menuBtn span:after {
+    cursor: pointer;
+    border-radius: 5px;
+    height: 5px;
+    width: 35px;
+    background: rgb(0, 0, 0);
+    position: absolute;
+    display: inline-block;
+    content: '';
 }
 
-#mobileNavStyles_button span:nth-child(odd) {
-    left: 0px;
-    border-radius: 9px 0 0 9px;
+#mobileNavStyles_menuBtn span:before {
+    top: -10px;
 }
 
-#mobileNavStyles_button span:nth-child(1), #mobileNavStyles_button span:nth-child(2) {
-    top: 0px;
+#mobileNavStyles_menuBtn span:after {
+    bottom: -10px;
 }
 
-#mobileNavStyles_button span:nth-child(3), #mobileNavStyles_button span:nth-child(4) {
-    top: 18px;
+#mobileNavStyles_menuBtn span, #mobileNavStyles_menuBtn span:before, #mobileNavStyles_menuBtn span:after {
+    -webkit-transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -moz-transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -o-transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
 }
 
-#mobileNavStyles_button span:nth-child(5), #mobileNavStyles_button span:nth-child(6) {
-    top: 36px;
+#mobileNavStyles_menuBtn.active span {
+    background-color: transparent;
 }
 
-#mobileNavStyles_button.open span:nth-child(1), #mobileNavStyles_button.open span:nth-child(6) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
+#mobileNavStyles_menuBtn.active span:before, #mobileNavStyles_menuBtn.active span:after {
+    top: 0;
+}
+
+#mobileNavStyles_menuBtn.active span:before {
     transform: rotate(45deg);
 }
 
-#mobileNavStyles_button.open span:nth-child(2), #mobileNavStyles_button.open span:nth-child(5) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-
-#mobileNavStyles_button.open span:nth-child(1) {
-    left: 5px;
-    top: 7px;
-}
-
-#mobileNavStyles_button.open span:nth-child(2) {
-    left: calc(50% - 5px);
-    top: 7px;
-}
-
-#mobileNavStyles_button.open span:nth-child(3) {
-    left: -50%;
-    opacity: 0;
-}
-
-#mobileNavStyles_button.open span:nth-child(4) {
-    left: 100%;
-    opacity: 0;
-}
-
-#mobileNavStyles_button.open span:nth-child(5) {
-    left: 5px;
-    top: 29px;
-}
-
-#mobileNavStyles_button.open span:nth-child(6) {
-    left: calc(50% - 5px);
-    top: 29px;
+#mobileNavStyles_menuBtn.active span:after {
+    transform: translateY(-10px) rotate(-45deg);
+    top: 10px;
 }
