--- a/client/src/pages/HomePage/homePage.css
+++ b/client/src/pages/HomePage/homePage.css
@@ -1,12 +1,17 @@
 /* home page root element */
 
-#homePageStyles_root {}
+#homePageStyles_root {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 /* header image wrapper */
 
 #homePageStyles_introImageWrap {
     height: 100%;
     margin-top: 2rem;
+    position: relative;
 }
 
 /* inner image wrapper around images */
@@ -16,20 +21,22 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    height: auto;
 }
 
 /* main center image of cait */
 
 #homePageStyles_mainImg {
     position: absolute;
-    top: 7rem;
+    top: 2rem;
     left: 50%;
     -moz-transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
     display: block;
-    width: 85%;
-    max-width: 40rem;
+    width: 70%;
+    max-width: 30rem;
+    /* max-width: 49rem; */
     border: .8rem solid rgb(255, 255, 255);
     border-radius: 3px;
     padding: 0;
@@ -41,57 +48,91 @@
 .homePageStyles_underlayImgLeft {
     display: block;
     width: 100%;
-    max-width: 40rem;
-    margin: 0 .5rem 0 .5rem;
-    border-radius: 3px;
-    padding-right: 1rem;
-    height: 30rem;
+    height: 38rem;
+    margin-right: 1rem;
+    margin-left: .5rem;
 }
 
 .homePageStyles_underlayImgRight {
     display: block;
     width: 100%;
-    max-width: 40rem;
-    margin: 0 .5rem 0 .5rem;
-    border-radius: 3px;
-    padding-left: 1rem;
-    height: 30rem;
+    height: 38rem;
+    margin-left: 1rem;
+    margin-right: .5rem;
+}
+
+/* about section wrapper */
+
+#homePageStyles_aboutWrap {
+    height: 8rem;
+    margin-top: 11rem;
+    padding: 1rem;
+}
+
+/* inner wrap surrounding the paragraph intro text */
+
+#homePageStyles_aboutPWrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+/* the paragraph text */
+
+.homePageStyles_pText {
+    width: 42rem;
+    text-align: center;
 }
 
 /* ! MEDIA QUERIES */
 
-@media only screen and (max-width: 754px) {
+@media only screen and (max-width: 646px) {
+    /* the two background images behind the front middle image one is left and the other is right*/
     .homePageStyles_underlayImgLeft {
-        height: 25rem;
+        height: 34rem
     }
     .homePageStyles_underlayImgRight {
-        height: 25rem;
+        height: 34rem
     }
 }
 
-@media only screen and (max-width: 632px) {
+@media only screen and (max-width: 578px) {
+    /* the two background images behind the front middle image one is left and the other is right*/
     .homePageStyles_underlayImgLeft {
-        height: 20rem;
+        height: 30rem
     }
     .homePageStyles_underlayImgRight {
-        height: 20rem;
+        height: 30rem
     }
 }
 
-@media only screen and (max-width: 478px) {
+@media only screen and (max-width: 492px) {
+    /* the two background images behind the front middle image one is left and the other is right*/
     .homePageStyles_underlayImgLeft {
-        height: 17rem;
+        height: 26rem
     }
     .homePageStyles_underlayImgRight {
-        height: 17rem;
+        height: 26rem
     }
 }
 
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 424px) {
+    /* the two background images behind the front middle image one is left and the other is right*/
     .homePageStyles_underlayImgLeft {
-        height: 14rem;
+        height: 22rem
     }
     .homePageStyles_underlayImgRight {
-        height: 14rem;
+        height: 22rem
+    }
+}
+
+@media only screen and (max-width: 352px) {
+    /* the two background images behind the front middle image one is left and the other is right*/
+    .homePageStyles_underlayImgLeft {
+        height: 20rem
+    }
+    .homePageStyles_underlayImgRight {
+        height: 20rem
     }
 }
