--- a/client/src/components/Post/PostCategories/postCategories.css
+++ b/client/src/components/Post/PostCategories/postCategories.css
@@ -1,7 +1,8 @@
 /* root component element */
 
 #postCategoriesStyles_root {
-    height: 100%;
+    height: 35rem;
+    margin-top: 3rem;
 }
 
 /* relative background for the cards */
@@ -9,5 +10,18 @@
 #postCategoriesStyles_relativeBg {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 18rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* each category card */
+
+.postCategoriesStyles_card {
+    height: 21rem;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgb(97, 97, 97);
+    margin: 3rem .5rem 0 .5rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
