--- a/client/src/components/Post/PostCategories/postCategories.css
+++ b/client/src/components/Post/PostCategories/postCategories.css
@@ -2,7 +2,7 @@
 
 #postCategoriesStyles_root {
     height: 35rem;
-    margin-top: 3rem;
+    margin-top: 7rem;
 }
 
 /* relative background for the cards */
@@ -15,13 +15,33 @@
     justify-content: space-evenly;
 }
 
+/* outer card style */
+
+.postCategoriesStyles_outerCard {
+    width: 100%;
+    max-width: 20rem;
+    margin: 2rem .5rem 0 .5rem;
+}
+
 /* each category card */
 
-.postCategoriesStyles_card {
+.postCategoriesStyles_outerCard>.postCategoriesStyles_card {
     height: 21rem;
     width: 100%;
     max-width: 20rem;
     background-color: rgb(97, 97, 97);
-    margin: 3rem .5rem 0 .5rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+}
+
+/* selecting the middle card for unique styling */
+
+.postCategoriesStyles_outerCard:nth-child(2) {
+    margin-top: 6rem;
+}
+
+/* style of buttons */
+.postCategoriesStyles_button {
+    width: 100%;
+    margin: 1rem 0;
 }
