--- a/client/src/components/Subscribe/subscribe.css
+++ b/client/src/components/Subscribe/subscribe.css
@@ -32,9 +32,9 @@
     border-radius: 4px;
     padding: .5rem .3rem;
     font-size: 1.2rem;
-    margin: 0 .5rem;
+    margin: .5rem .5rem;
     width: 90%;
-    max-width: 14rem;
+    max-width: 15rem;
     height: 1.4rem;
 }
 
