--- a/client/src/components/Post/PostCategories/postCategories.css
+++ b/client/src/components/Post/PostCategories/postCategories.css
@@ -13,6 +13,7 @@
     height: 18rem;
     display: flex;
     justify-content: space-evenly;
+    flex-flow: row wrap;
 }
 
 /* outer card style */
@@ -21,17 +22,20 @@
     width: 100%;
     max-width: 20rem;
     margin: 2rem .5rem 0 .5rem;
+    background-color: white;
+    height: 21rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    cursor: pointer;
 }
 
 /* each category card */
 
 .postCategoriesStyles_outerCard>.postCategoriesStyles_card {
-    height: 21rem;
+    height: 18rem;
     width: 100%;
     max-width: 20rem;
     background-color: rgb(97, 97, 97);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    border-radius: 3px;
 }
 
 /* selecting the middle card for unique styling */
@@ -40,8 +44,24 @@
     margin-top: 6rem;
 }
 
-/* style of buttons */
-.postCategoriesStyles_button {
-    width: 100%;
-    margin: 1rem 0;
+/* card label text */
+
+.postCategoriesStyles_labelText {
+    text-align: center;
+    margin: .4rem 0 0 0;
+    font-size: 1.4rem;
+}
+
+/* ! MEDIA QUERIES */
+
+@media only screen and (max-width: 1024px) {
+    .postCategoriesStyles_outerCard {
+        margin: 2rem;
+    }
+    .postCategoriesStyles_outerCard:nth-child(2) {
+        margin-top: 2rem;
+    }
+    #postCategoriesStyles_relativeBg {
+        height: auto;
+    }
 }
