--- a/client/src/components/Post/PostCategories/postCategories.css
+++ b/client/src/components/Post/PostCategories/postCategories.css
@@ -8,7 +8,6 @@
 /* relative background for the cards */
 
 #postCategoriesStyles_relativeBg {
-    position: relative;
     width: 100%;
     height: 18rem;
     display: flex;
@@ -24,7 +23,7 @@
     margin: 2rem .5rem 0 .5rem;
     background-color: white;
     height: 21rem;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     cursor: pointer;
     overflow: hidden;
@@ -94,7 +93,7 @@
 
 /* ! MEDIA QUERIES */
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1103px) {
     .postCategoriesStyles_outerCard {
         margin: 2rem;
     }
@@ -104,4 +103,8 @@
     #postCategoriesStyles_relativeBg {
         height: auto;
     }
+    #postCategoriesStyles_root {
+        height: auto;
+    }
+    
 }
