--- a/client/src/pages/HomePage/homePage.css
+++ b/client/src/pages/HomePage/homePage.css
@@ -145,6 +145,14 @@
     transform: translateX(-50%) translateY(-50%);
 }
 
+/* website counter */
+
+#homePageStyles_hitCounterWrap {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+
 /* ! MEDIA QUERIES */
 
 @media only screen and (max-width: 646px) {
