changed style of post content

--- a/client/src/components/Button/button.css
+++ b/client/src/components/Button/button.css
@@ -1,5 +1,5 @@
 .buttonStyles_btn {
-    margin: 1rem;
+    margin: 1rem 0;
     padding: .5rem .8rem;
     cursor: pointer;
     text-decoration: none;
