--- a/client/src/components/Post/PostContent/Comments/comments.css
+++ b/client/src/components/Post/PostContent/Comments/comments.css
@@ -1,4 +1,11 @@
+/* root element of the component */
+
+#commentsStyles_root {
+    width: 100%;
+}
+
 /* button icon */
+
 .commentsStyles_btnIcon {
     margin-left: .4rem;
 }
