--- a/client/src/components/Post/PostContent/PostData/postData.css
+++ b/client/src/components/Post/PostContent/PostData/postData.css
@@ -4,9 +4,10 @@
     display: block;
     width: 100%;
     max-width: 60rem;
-    border: 2px solid black;
+    border-radius: 3px;
     height: 100%;
-    margin: .5rem;
+    margin: 3rem .5rem 1rem .5rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 /* title */
