--- a/client/src/components/Auth/Login/login.css
+++ b/client/src/components/Auth/Login/login.css
@@ -8,10 +8,10 @@
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     width: 95%;
-    max-width: 24rem;
+    max-width: 30rem;
     height: auto;
     border-radius: 4px;
-    box-shadow: 0 3px 12px rgb(219, 219, 219);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 /* form element */
@@ -27,10 +27,10 @@
 /* input */
 
 .loginStyles_input {
-    width: auto;
+    width: 20rem;
     display: block;
     text-align: left;
-    margin: 1.5rem 0;
+    margin: 2.5rem 0 0 0;
     padding: .8rem .5rem;
     font-size: 1rem;
     border-radius: 5px;
@@ -65,11 +65,19 @@
 /* submit button for form */
 
 #loginStyles_submitBtn {
-    /* background-color: #1b1e1a; */
     background-color: white;
     border: 1px solid white;
     border-radius: 3px;
     font-size: 1.4rem;
     color: black;
     cursor: pointer;
+    margin: 2.5rem 0;
+}
+
+/* ! MEDIA QUERIES */
+
+@media only screen and (max-width: 421px) {
+    .loginStyles_input {
+        width: auto;
+    }
 }
