--- a/client/src/components/Button/button.css
+++ b/client/src/components/Button/button.css
@@ -23,6 +23,13 @@
     animation-iteration-count: 1;
 }
 
+/* the inner section for icon buttons */
+
+.push>span {
+    display: inline-flex;
+    align-items: center;
+}
+
 @keyframes push {
     50% {
         transform: scale(0.8);
