--- a/client/src/components/Layout/MobileNav/mobileNav.css
+++ b/client/src/components/Layout/MobileNav/mobileNav.css
@@ -66,7 +66,7 @@
     height: 2px;
     left: 50%;
     position: absolute;
-    background: rgb(144, 0, 0);
+    background: rgb(0, 0, 0);
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
 }
@@ -80,7 +80,9 @@
     height: 100vh;
     width: 250px;
     opacity: 0;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     visibility: hidden;
     transition: all 0.25s ease;
     transform: translateX(-50%);
